tests/broken/raw-rust-string.stderr
error: Backtrace:
       [line 0, column 0] Expected '-', found '== 3 %}'
       [line 0, column 0] Alt in "== 3 %}"
 --> tests/broken/raw-rust-string.rs:4:37
  |
4 | #[oxiplate_inline = r##"{% if "foo" == 3 %}"##]
  |                                     ^^^^^^^
